@@ -279,6 +279,9 @@ New in v0.8.00 (2016/07/??)
   - You can test all of these changes in one simple line:
     $ LANGUAGE=fr duplicity remove-older-than $'accept\xffées'
 * Fix backend.py to allow string, list, and tuple types to support megabackend.py.
+* Fixed bug #1715650 with patch from Mattheww S
+  - Fix to make duplicity attempt a get first, then create, a container
+    in order to support container ACLs.
 
 
 New in v0.7.08 (2016/07/02)
